--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Global Styles */
 
 body {
-
+    /* background-color: rgba(15, 15, 54, 0.26); */
 }
 
 #logo img{
@@ -61,38 +61,69 @@ a:active {
 
 
 
+/* Body */
+
+.content-container {
+    position: relative;
+}
+
+
 /* Navigation */
 
+.star {
+    font-size: 5em;
+    font-weight: bold;
+}
+
+#nav-container {
+    position: absolute;
+    z-index: 2;
+}
+
+.content-container #nav-container #about {
+    position: absolute;
+    top: 30px;
+    left: 200px;
+}
+
+.content-container #nav-container #tarot {
+    position: absolute;
+    top: 300px;
+    left: 150px;
+}
+
+.content-container #nav-container #artwork {
+    position: absolute;
+    top: 100px;
+    left: 1000px;
+}
+
+.content-container #nav-container #github {
+    position: absolute;
+    top: 660px;
+    left: 1100px;
+}
 
 
 /* Circle Background */
 
-#circle {
-
+#circle-show {
+    position: fixed;
+    left: 15%;
+    top: 8%;
 }
 
 #circle-inside {
     background-image: linear-gradient(rgb(248, 215, 0), rgba(255, 255, 255, 0)); 
-    min-width: 40em;
-    min-height: 40em;
-    display: inline-block;
+    min-width: 55em;
+    min-height: 55em;
     border-radius: 50%;
-    margin: 0px 0px 0 0px;
-    z-index: 1;
-
 }
 
 #circle-border {
   background: linear-gradient(to right, red, rgb(38, 26, 47));
-  min-width: 40em;
-  min-height: 40em;
-  display: inline-block;
+  min-width: 55em;
+  min-height: 55em;
   border-radius: 50%;
-  position: absolute;
-  left: 25%;
-  z-index: 1;
-
 }
-
-/* Body content */
 
