--- a/style.css
+++ b/style.css
@@ -78,29 +78,38 @@ a:active {
 #nav-container {
     position: absolute;
     z-index: 2;
+    max-width: 900px;
+}
+
+.content-container #nav-container #collapsed-menu {
+    position: fixed;
+    top: -30px;
+    right: 30px;
+    color:deeppink;
+    font-size: 0.75em;
 }
 
 .content-container #nav-container #about {
     position: absolute;
-    top: 30px;
+    top: 10px;
     left: 200px;
 }
 
 .content-container #nav-container #tarot {
     position: absolute;
     top: 300px;
-    left: 150px;
+    left: 100px;
 }
 
 .content-container #nav-container #artwork {
     position: absolute;
-    top: 100px;
-    left: 1000px;
+    top: 200px;
+    left: 1060px;
 }
 
 .content-container #nav-container #github {
     position: absolute;
-    top: 660px;
+    top: 550px;
     left: 1100px;
 }
 
