--- a/style.css
+++ b/style.css
@@ -125,19 +125,43 @@ a:active {
     top: -10%;
 }
 
-#circle-inside {
+.circle-inside {
     background-image: linear-gradient(rgb(248, 215, 0), rgba(255, 255, 255, 0)); 
     min-width: 150vh;
     min-height: 120vh;
     border-radius: 50%;
 }
 
-#circle-border {
+.circle-border {
   background: linear-gradient(to right, red, rgb(38, 26, 47));
   min-width: 150vh;
   min-height: 120vh;
   border-radius: 50%;
 }
+
+.circle-inside-dark {
+    background-image: linear-gradient(to left, rgba(12, 3, 51, 0.918), rgba(255, 255, 255, 0)); 
+    min-width: 150vh;
+    min-height: 120vh;
+    border-radius: 50%;
+}
+
+.circle-border-dark {
+    background-image: linear-gradient( rgb(255, 89, 12), rgba(255, 128, 0, 0.71));
+    min-width: 150vh;
+    min-height: 120vh;
+    border-radius: 50%;
+}
+
+
+
+
+/* Hide content */
+
+.display-none {
+    display: none;
+}
+
 
 /* About */
 
@@ -146,6 +170,7 @@ a:active {
     top: 200px;
     left: 600px;
     text-align: center;
-    display: none;
 }
+
+
 
