--- a/style.css
+++ b/style.css
@@ -9,9 +9,6 @@ body {
     max-width: 200px;
 }
 
-/* .nav-wrapper {
-    position:relative;
-} */
 
 /* Splash Page */
 
@@ -46,14 +43,6 @@ a:active {
 }
 
 
-/* Headers */
-
-/* #headers {
-    position: absolute;
-    top: 10em;
-} */
-
-
 
 /* Body */
 
@@ -69,12 +58,27 @@ a:active {
     font-weight: 900;
     font-family: 'Mrs Sheppards';
     margin: 0;
+    color: black;
 }
 
-/* h1 {
+.star-click {
+    font-size: 6em;
+    font-weight: 900;
+    font-family: 'Mrs Sheppards';
+    margin: 0;
+    color:rgba(255, 141, 2, 0.913)
+}
+
+.show-nav-text {
     font-family: 'Mrs Sheppards';
     letter-spacing: .15em;
-} */
+    font-size: 4em;
+    color: rgba(248, 215, 0, 0.913);
+    min-width: 700px;
+    margin: 0px;
+    font-weight: 100;
+}
+
 
 #nav-container {
     position: absolute;
@@ -82,36 +86,35 @@ a:active {
     max-width: 900px;
 }
 
-.content-container #nav-container #collapsed-menu {
+.content-container #nav-container #razzle-dazzle {
     position: fixed;
     top: 10px;
     right: 30px;
-    color:deeppink;
-    font-size: 0.75em;
+    font-size: 0.73em;
 }
 
 .content-container #nav-container #about h1 {
     position: absolute;
-    top: 50px;
+    top: 30px;
     left: 310px;
 }
 
 .content-container #nav-container #tarot h1 {
     position: absolute;
-    top: 170px;
+    top: 190px;
     left: 150px;
 }
 
 .content-container #nav-container #github h1 {
     position: absolute;
-    top: 350px;
+    top: 360px;
     left: 50px;
 }
 
 .content-container #nav-container #artwork h1 {
     position: absolute;
-    top: 550px;
-    left: 230px;
+    top: 540px;
+    left: 210px;
 }
 
 
@@ -170,7 +173,7 @@ a:active {
     top: 200px;
     left: 600px;
     text-align: center;
-    display: none;
+    color: white;
 }
 
 
