--- a/style.css
+++ b/style.css
@@ -178,6 +178,27 @@ a:active {
 
 /* Tarot Card */
 
+.tarot-card {
+    position: absolute;
+    top: 200px;
+    left: 600px;
+    text-align: center;
+    font-family: 'Mrs Sheppards';
+    font-weight: lighter;
+    font-size: 2em;
+    min-width: 400px;
+    color: black;
+}
+
+.tarot-card img{
+    background-color:rgba(255, 255, 255, 0.479);
+    border: 30px solid rgba(255, 255, 255, 0.266);
+    border-radius: 20%;
+}
+
+text{
+
+}
 
 
 
