--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ a:active {
     display: flex;
     align-items: center;
     justify-content: center;    
+    max-height: 700px;
 }
 
 
@@ -101,27 +102,27 @@ a:active {
 
 .content-container #nav-container #about h1 {
     position: fixed;
-    top: 150px;
-    left: 450px;
+    top: 80px;
+    left: 390px;
 }
 
 .content-container #nav-container #tarot h1 {
     position: fixed;
-    top: 280px;
-    left: 280px;
+    top: 210px;
+    left: 230px;
 }
 
 
 .content-container #nav-container #github h1 {
     position: fixed;
-    top: 470px;
-    left: 150px;
+    top: 350px;
+    left: 290px;
 }
 
 .content-container #nav-container #artwork h1 {
     position: fixed;
-    top: 640px;
-    left: 300px;
+    top: 500px;
+    left: 200px;
 }
 
 
@@ -130,37 +131,38 @@ a:active {
 /* Circle Background */
 
 #circle-show {
-    /* position: fixed;
-    left: 0%;
-    top: 0%; */
-    display: flex;
+    position: fixed;
+    left: 10%;
+    top: 0%;
+    /* display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
+    
 }
 
 .circle-inside {
-    background-image: url(./images/dark-1.png);
+    background-image: url(./images/stars.jpg);
     opacity: 0.65;
-    min-width: 140vh;
-    min-height: 90vh;
+    min-width: 110vh;
+    min-height: 100vh;
     border-radius: 50%;
 }
 
 .circle-border {
-    min-width: 120vh;
+    min-width: 110vh;
     min-height: 100vh;
     border-radius: 50%;
 }
 
 .circle-inside-dark{
     min-width: 110vh;
-    min-height: 90vh;
+    min-height: 100vh;
     border-radius: 50%;
 
 }
 
 .circle-border-dark {
-    min-width: 120vh;
+    min-width: 110vh;
     min-height: 100vh;
     border-radius: 50%;
 
@@ -208,7 +210,7 @@ a:active {
 
 .show-about {
     position: absolute;
-    top: 200px;
+    top: 280px;
     left: 530px;
     text-align: center;
     color: white;
