--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ a:active {
     font-weight: 900;
     font-family: 'Mrs Sheppards';
     margin: 0;
-    color: rgba(248, 215, 0, 0.913);
+    color: rgb(248, 215, 0);
 }
 
 .star-click {
@@ -104,27 +104,27 @@ a:active {
 
 .content-container #nav-container #about h1 {
     position: fixed;
-    top: 80px;
-    left: 390px;
+    top: 50px;
+    left: 400px;
 }
 
 .content-container #nav-container #tarot h1 {
     position: fixed;
-    top: 210px;
-    left: 230px;
+    top: 130px;
+    left: 200px;
 }
 
 
 .content-container #nav-container #github h1 {
     position: fixed;
-    top: 350px;
-    left: 290px;
+    top: 260px;
+    left: 70px;
 }
 
 .content-container #nav-container #artwork h1 {
     position: fixed;
-    top: 500px;
-    left: 200px;
+    top: 380px;
+    left: 170px;
 }
 
 
@@ -150,28 +150,28 @@ a:active {
     border-radius: 50%;
 }
 
-.circle-border {
+/* .circle-border {
     min-width: 110vh;
     min-height: 110vh;
     border-radius: 50%;
-}
+} */
 
 .circle-inside-dark{
     background-image: url(./images/light-3.png);
     background-position: center;
-    opacity: 0.85;
-    min-width: 110vh;
-    min-height: 110vh;
+    opacity: 0.65;
+    min-width: 150vh;
+    min-height: 150vh;
     border-radius: 50%;
 
 }
 
-.circle-border-dark {
+/* .circle-border-dark {
     min-width: 110vh;
     min-height: 110vh;
     border-radius: 50%;
 
-}
+} */
 
 /* .circle-inside {
     background-image: linear-gradient(rgb(248, 194, 0), rgba(255, 255, 255, 0)); 
