--- a/style.css
+++ b/style.css
@@ -14,10 +14,10 @@ body {
 }
 
 header {
-    font-size: 1.6em;
+    font-size: 1.8em;
     font-weight: 900;
     font-family: 'Mrs Sheppards';
-    letter-spacing: 0.2em;
+    letter-spacing: 0.3em;
     color: white;
     position: fixed;
     bottom: 0px;
@@ -101,11 +101,12 @@ a:active {
     margin: 0;
 }
 
-.content-container #nav-container #razzle-dazzle {
+.content-container #nav-container #razzle-dazzle h1 {
     position: fixed;
     top: 10px;
     right: 30px;
-    font-size: 0.73em;
+    font-size: 3.5em;
+    color: rgb(255, 255, 255);
 }
 
 .content-container #nav-container #about h1 {
@@ -140,8 +141,9 @@ a:active {
 
 #circle-show {
     position: fixed;
-    left: 30%;
+    left: 40%;
     top: -10%;
+
     /* display: flex;
     align-items: center;
     justify-content: center; */
