--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ a:active {
     position: fixed;
     left: 35%;
     top: -10%;
+    z-index: -1;
 
     /* display: flex;
     align-items: center;
@@ -229,7 +230,7 @@ a:active {
 }
 
 .show-about h2 span {
-    font-family: 'Mrs Sheppards';
+    font-family: 'Yellowtail';
     letter-spacing: 0.15em;
 }
 
@@ -256,25 +257,32 @@ a:active {
     left: 10px;
     text-align: center;
     max-width: 300px; */
-    display: flex;
+    /* display: flex;
     align-items:flex-start;
-    justify-content: left;
+    justify-content: left; */
+    position: relative;
     max-width: 400px;
 
 }
 
 .tarot-card img{
-    background-color:rgba(255, 255, 255, 0.479);
-    border: 8px solid rgba(248, 215, 0, 0.53);
+    border: 8px solid rgba(248, 215, 0, 0.381);
     border-radius: 18%;
+    position: absolute;
+    top: 250px;
+    left: 10px;
 }
 
 .tarot-description {
-    text-align: center;
-    font-weight: lighter;
-    font-size: 1.5em;
-    letter-spacing: 0.10em;
+    text-align: left;
+    line-height: 1.3em;
+    font-size: 2em;
     color: black; 
+    position: absolute;
+    top: 350px;
+    left: 300px;
+    font-style: italic;
+    text-transform: lowercase;
 }
 
 
