header resized, removed unused javascript comments

--- a/style.css
+++ b/style.css
@@ -14,13 +14,13 @@ body {
 }
 
 header {
-    font-size: 2.7em;
+    font-size: 4.7em;
     font-family: 'Yellowtail';
     letter-spacing: -0.2px;
-    color: rgba(255, 255, 255, 0.723);
+    color: rgb(190, 224, 255);
     position: fixed;
-    bottom: 100px;
-    left: -140px;
+    top: 150px;
+    left: -260px;
     rotate: 90deg;
     z-index: 3;
 }
@@ -85,6 +85,7 @@ a:active {
     font-weight: 900;
     margin: 0;
     color: rgb(248, 215, 0);
+    z-index: 3;
 }
 
 .star-click {
@@ -105,33 +106,33 @@ a:active {
     top: 10px;
     right: 30px;
     font-size: 3.5em;
-    color: rgb(255, 255, 255);
+    color: white;
     z-index: 3;
 }
 
 .content-container #nav-container #about h1 {
     position: fixed;
     top: 50px;
-    left: 550px;
+    left: 650px;
 }
 
 .content-container #nav-container #tarot h1 {
     position: fixed;
     top: 150px;
-    left: 200px;
+    left: 300px;
 }
 
 
 .content-container #nav-container #github h1 {
     position: fixed;
     top: 230px;
-    left: 400px;
+    left: 480px;
 }
 
 .content-container #nav-container #artwork h1 {
     position: fixed;
     top: 370px;
-    left: 230px;
+    left: 300px;
 }
 
 
@@ -140,7 +141,7 @@ a:active {
 #circle-show {
     position: fixed;
     left: 35%;
-    top: -10%;
+    top: -15%;
     z-index: -1;
 
     /* display: flex;
@@ -152,7 +153,7 @@ a:active {
 .circle-inside {
     background-image: url(./images/stars.jpg);
     background-position: left;
-    opacity: 0.38;
+    opacity: 0.48;
     min-width: 160vh;
     min-height: 160vh;
     border-radius: 50%;
