--- a/style.css
+++ b/style.css
@@ -1,11 +1,5 @@
 /* Global Styles */
 
-/* body {
-    background-image: linear-gradient(rgb(248, 120, 0), rgb(32, 3, 60)); 
-    background-size: 300vh 120vh;
-    background-repeat: no-repeat;
-} */
-
 body {
     background-image: url(./images/light-1.png);
     background-position-y: top;
@@ -149,11 +143,6 @@ a:active {
     left: 40%;
     top: -15%;
     z-index: -1;
-
-    /* display: flex;
-    align-items: center;
-    justify-content: center; */
-    
 }
 
 .circle-inside {
@@ -164,12 +153,6 @@ a:active {
     min-height: 160vh;
     border-radius: 50%;
 }
-
-/* .circle-border {
-    min-width: 110vh;
-    min-height: 110vh;
-    border-radius: 50%;
-} */
 
 .circle-inside-dark{
     background-image: url(./images/light-3.png);
@@ -182,41 +165,6 @@ a:active {
     background-blend-mode: overlay;
 
 }
-
-/* .circle-border-dark {
-    min-width: 110vh;
-    min-height: 110vh;
-    border-radius: 50%;
-
-} */
-
-/* .circle-inside {
-    background-image: linear-gradient(rgb(248, 194, 0), rgba(255, 255, 255, 0)); 
-    min-width: 120vh;
-    min-height: 100vh;
-    border-radius: 50%;
-}
-
-.circle-border {
-  background: linear-gradient(to right, rgb(255, 0, 0), rgb(38, 26, 47));
-  min-width: 120vh;
-  min-height: 100vh;
-  border-radius: 50%;
-}
-
-.circle-inside-dark {
-    background-image: linear-gradient( rgba(12, 3, 51, 0.918), rgba(255, 255, 255, 0)); 
-    min-width: 120vh;
-    min-height: 100vh;
-    border-radius: 50%;
-}
-
-.circle-border-dark {
-    background-image: linear-gradient( rgb(255, 89, 12), rgba(255, 128, 0, 0.71));
-    min-width: 120vh;
-    min-height: 100vh;
-    border-radius: 50%;
-} */
 
 
 /* Razzle Dazzle Effect */
@@ -273,17 +221,10 @@ video {
     font-size: 2.3em;
 }
 
+
 /* Tarot Card */
 
 .tarot-display {
-    /* position: relative;
-    top: 150px;
-    left: 10px;
-    text-align: center;
-    max-width: 300px; */
-    /* display: flex;
-    align-items:flex-start;
-    justify-content: left; */
     position: relative;
     max-width: 700px;
 
@@ -311,3 +252,40 @@ video {
 }
 
 
+
+/* Circle Background Colors only
+
+.circle-border-dark {
+    min-width: 110vh;
+    min-height: 110vh;
+    border-radius: 50%;
+
+} 
+
+.circle-inside {
+    background-image: linear-gradient(rgb(248, 194, 0), rgba(255, 255, 255, 0)); 
+    min-width: 120vh;
+    min-height: 100vh;
+    border-radius: 50%;
+}
+
+.circle-border {
+  background: linear-gradient(to right, rgb(255, 0, 0), rgb(38, 26, 47));
+  min-width: 120vh;
+  min-height: 100vh;
+  border-radius: 50%;
+}
+
+.circle-inside-dark {
+    background-image: linear-gradient( rgba(12, 3, 51, 0.918), rgba(255, 255, 255, 0)); 
+    min-width: 120vh;
+    min-height: 100vh;
+    border-radius: 50%;
+}
+
+.circle-border-dark {
+    background-image: linear-gradient( rgb(255, 89, 12), rgba(255, 128, 0, 0.71));
+    min-width: 120vh;
+    min-height: 100vh;
+    border-radius: 50%;
+}  */
