languages and font position adjustments to about and tarot div

--- a/style.css
+++ b/style.css
@@ -77,7 +77,8 @@ a:active {
 .star {
     font-size: 6em;
     font-weight: 900;
-    margin: 0;
+    margin: 0px;
+    padding: 0px;
     color: rgb(248, 215, 0);
     z-index: 3;
 }
@@ -86,14 +87,14 @@ a:active {
     font-size: 6em;
     font-weight: 900;
     margin: 0;
-    color:rgb(255, 107, 2)
+    color:rgb(255, 107, 2);
 }
 
 .show-nav-text {
-    font-size: 2.5em;
+    font-size: 2.7em;
     font-style: italic;
     color: rgb(248, 215, 0);
-    margin: 0;
+    margin: 0px;
 }
 
 .content-container #nav-container #razzle-dazzle h1 {
@@ -114,8 +115,8 @@ a:active {
 
 .content-container #nav-container #tarot h1 {
     position: fixed;
-    top: 150px;
-    left: 300px;
+    top: 130px;
+    left: 330px;
     z-index: 3;
 }
 
@@ -123,7 +124,7 @@ a:active {
 .content-container #nav-container #github h1 {
     position: fixed;
     top: 230px;
-    left: 480px;
+    left: 500px;
     z-index: 3;
 
 }
@@ -131,7 +132,7 @@ a:active {
 .content-container #nav-container #artwork h1 {
     position: fixed;
     top: 370px;
-    left: 300px;
+    left: 280px;
     z-index: 3;
 }
 
@@ -186,11 +187,16 @@ video {
     left: 150px;
 }
 
+.show-about img {
+    border: 8px solid rgba(233, 208, 187, 0.685);
+    border-radius: 50%;
+}
+
 .show-about #bio {
     position: absolute;
     top: 0px;
-    left: 330px;
-    width: 400px;
+    left: 350px;
+    width: 300px;
     text-align: left;
     color: black;
 }
@@ -206,12 +212,18 @@ video {
     letter-spacing: -0.2px;
 }
 
+
 .show-about #bio p em {
-    font-size: 1.6em;
+    font-size: 2em;
 }
 
 .show-about #bio-list ul {
     margin: 0 0 30px 0;
+}
+
+.show-about #bio-list ul li:first-child {
+    color: rgb(255, 82, 2);
+    margin: 30px 0 30px -40px;
 }
 
 .show-about #bio-list ul li {
@@ -231,7 +243,9 @@ video {
 
 .tarot-display {
     position: relative;
-    max-width: 700px;
+    max-width: 900px;
+    left: 20px;
+    top: 20px;
 
 }
 
@@ -253,7 +267,7 @@ video {
     left: 398px;
     font-style: italic;
     text-transform: lowercase;
-    width: 200px;
+    max-width: 500px;
 }
 
 
